# arc-finetuning-st

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: lint.yaml
arc_finetuning_st/: evaluation.py
arc_finetuning_st/cli/: command_line.py  finetune.py
arc_finetuning_st/finetuning/: finetuning_example.py
arc_finetuning_st/streamlit/: app.py  controller.py  examples.py  startup.py
arc_finetuning_st/workflows/: arc_task_solver.py  events.py  finetuning_dataset_curation.py  human_input.py  models.py  prompts.py
data/evaluation/: 00576224.json  009d5c81.json  00dbd492.json  03560426.json  05a7bcf2.json  0607ce86.json  0692e18c.json  08573cc6.json  0934a4d8.json  09c534e7.json  0a1d4ef5.json  0a2355a6.json  0b17323b.json  0bb8deee.json  0becf7df.json  0c786b71.json  0c9aba6e.json  0d87d2a6.json  0e671a1a.json  0f63c0b9.json  103eff5b.json  11e1fe23.json  12997ef3.json  12eac192.json  136b0064.json  13713586.json  137f0df0.json  140c817e.json  14754a24.json  15113be4.json  15663ba9.json  15696249.json  16b78196.json  17b80ad2.json  17cae0c1.json  18419cfa.json  184a9768.json  195ba7dc.json  1990f7a8.json  19bb5feb.json  (+355 more)
data/training/: 007bbfb7.json  00d62c1b.json  017c7c7b.json  045e512c.json  0520fde7.json  05269061.json  05f2a901.json  06df4c85.json  08ed6ac7.json  09629e4f.json  0962bcdd.json  0a938d79.json  0b148d64.json  0ca9ddb6.json  0d3d703e.json  0dfd9992.json  0e206a2e.json  10fcaaa3.json  1190e5a7.json  137eaa0f.json  150deff5.json  (+356 more)
programs/: finetune.py
